--- a/Dextools/token_prices_analyzis.ipynb
+++ b/Dextools/token_prices_analyzis.ipynb
@@ -2080,6 +2080,31 @@
     "- Mybe add table with basic \"tokenomics\" at the end of token-description list in text(??).\n",
     "- Look at Ljung-Box test."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5/5/23\n",
+    "\n",
+    "What have I done:\n",
+    "- Started with GARCH models\n",
+    " - Got the basic specification of GARCH, GJR-GARCH, EGARCH\n",
+    " - started looking for optimal specification\n",
+    "    - In GARCH, it seems that 1,1 lags and normal or skewt dist will work best\n",
+    "\n",
+    "What to do next:\n",
+    "- Repeat the searching procedure for EGARCH and GJR"
+   ]
   }
  ],
  "metadata": {
