Started looking for distribution of order order spacing

--- a/Dextools/token_prices_analyzis.ipynb
+++ b/Dextools/token_prices_analyzis.ipynb
@@ -12,21 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'InterpolationWarning' from 'warnings' (D:\\Program_files\\Python\\lib\\warnings.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39march\u001b[39;00m \u001b[39mimport\u001b[39;00m arch_model\n\u001b[0;32m     16\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mwarnings\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mwarnings\u001b[39;00m \u001b[39mimport\u001b[39;00m InterpolationWarning\n\u001b[0;32m     21\u001b[0m \u001b[39m# from arch.univariate import EGARCH\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[39m# from arch.univariate import ConstantMean\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[39m# from arch.univariate import Normal\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[39m#             (\"BabyDoge-WBNB\", \"https://www.dextools.io/app/en/bnb/pair-explorer/0xc736ca3d9b1e90af4230bd8f9626528b3d4e0ee0\", 180)\u001b[39;00m\n\u001b[0;32m     37\u001b[0m \u001b[39m#             ]\u001b[39;00m\n\u001b[0;32m     39\u001b[0m pair_list \u001b[39m=\u001b[39m [\n\u001b[0;32m     40\u001b[0m             (\u001b[39m\"\u001b[39m\u001b[39mAGIX-WETH\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mhttps://www.dextools.io/app/en/ether/pair-explorer/0xe45b4a84e0ad24b8617a489d743c52b84b7acebe\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m40\u001b[39m),\n\u001b[0;32m     41\u001b[0m             (\u001b[39m\"\u001b[39m\u001b[39mHEX-WETH\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mhttps://www.dextools.io/app/en/ether/pair-explorer/0x55d5c232d921b9eaa6b37b5845e439acd04b4dba\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m100\u001b[39m),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     49\u001b[0m             (\u001b[39m\"\u001b[39m\u001b[39mVOLT-WBNB\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mhttps://www.dextools.io/app/en/bnb/pair-explorer/0x487bfe79c55ac32785c66774b597699e092d0cd9\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m200\u001b[39m)\n\u001b[0;32m     50\u001b[0m             ]\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'InterpolationWarning' from 'warnings' (D:\\Program_files\\Python\\lib\\warnings.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -44,7 +32,7 @@
     "from arch.unitroot import PhillipsPerron\n",
     "from arch import arch_model\n",
     "import warnings\n",
-    "from warnings import InterpolationWarning\n",
+    "#from warnings import InterpolationWarning\n",
     "\n",
     "\n",
     "\n",
@@ -86,8 +74,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "def load_csv_to_df(file_path, verbose=False, name=\"\"):\n",
     "    # Load CSV file into a DataFrame\n",
     "    df = pd.read_csv(file_path)\n",
