Improved runtime significantly (runtime_dev)

--- a/Dextools/simulation_fixed_parameters.ipynb
+++ b/Dextools/simulation_fixed_parameters.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,8 @@
     "from scipy import stats\n",
     "import warnings\n",
     "from statsmodels.tools.sm_exceptions import ValueWarning\n",
+    "import random\n",
+    "\n",
     "\n",
     "pair_list = [\n",
     "            (\"AGIX-WETH\", \"https://www.dextools.io/app/en/ether/pair-explorer/0xe45b4a84e0ad24b8617a489d743c52b84b7acebe\", 40),\n",
@@ -2090,27 +2092,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 31.2 ms\n",
-      "Wall time: 22.9 ms\n"
+      "-0.2072026433594566\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "#%%timeit\n",
     "\n",
-    "for i in range(10000):\n",
-    "    x = 1\n",
-    "    #y = expit(x)\n",
+    "##TESTING the better way of computing logit in AR model in simulation - more effective, but does it give the same values??\n",
+    "##old:\n",
+    "AR_parameters = [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]\n",
+    "p = len(AR_parameters)\n",
+    "past_swaps = [0,0,0,1,1,0,0,1,0,1,0,0,1,0,0,1,0,1,0,0,1,0,1,0,0,1,0,0,1,0,1,0,0,1,1,0,0,0,0,1,0,0,1,0,1,0,1,0]\n",
+    "past_swaps = pd.Series(past_swaps[-p:])\n",
     "\n",
-    "    if expit(x) > 0.5:\n",
-    "        pass"
+    "#smoothe out labels\n",
+    "transformed_series = pd.Series(logit(past_swaps.clip(1e-3, 1 - 1e-3)).values.ravel())\n",
+    "#print(len(past_swaps), transformed_series)\n",
+    "\n",
+    "#computing the deterministic part based on past values and params\n",
+    "logit_probablity = np.sum(np.array(transformed_series)*np.flipud(AR_parameters)*0.1)\n",
+    "#defining random error\n",
+    "#error = np.random.normal(loc=0.0, scale=1.0, size=None)\n",
+    "\n",
+    "\n",
+    "#computing probability\n",
+    "probability = logit_probablity# + error\n",
+    "#print(logit_probablity, expit(logit_probablity), expit(probability), expit(probability) >= 0.5)\n",
+    "\n",
+    "#Return full probability (deterministic + random part).\n",
+    "#return expit(probability) >= 0.5\n",
+    "print(probability)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.2072026433594566\n"
+     ]
+    }
+   ],
+   "source": [
+    "#%%timeit\n",
+    "AR_parameters = [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]\n",
+    "p = len(AR_parameters)\n",
+    "past_swaps = [0,0,0,1,1,0,0,1,0,1,0,0,1,0,0,1,0,1,0,0,1,0,1,0,0,1,0,0,1,0,1,0,0,1,1,0,0,0,0,1,0,0,1,0,1,0,1,0]\n",
+    "past_swaps = np.array(past_swaps[-p:])\n",
+    "\n",
+    "#smoothe out labels\n",
+    "#transformed_series = logit(past_swaps.clip(1e-3, 1 - 1e-3)).values.ravel()\n",
+    "transformed_series = logit(np.clip(past_swaps, 1e-3, 1 - 1e-3))#.values.ravel()\n",
+    "#print(len(past_swaps), transformed_series)\n",
+    "\n",
+    "#computing the deterministic part based on past values and params\n",
+    "logit_probablity = np.sum(transformed_series*np.flipud(AR_parameters)*0.1)\n",
+    "#defining random error\n",
+    "#error = np.random.normal(loc=0.0, scale=1.0, size=None)\n",
+    "\n",
+    "#computing probability\n",
+    "probability = logit_probablity# + error\n",
+    "#print(logit_probablity, expit(logit_probablity), expit(probability), expit(probability) >= 0.5)\n",
+    "\n",
+    "#Return full probability (deterministic + random part).\n",
+    "#return expit(probability) >= 0.5\n",
+    "print( probability)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_funct(integer_in = None, multiple = None):\n",
+    "    return integer_in * multiple\n",
+    "\n",
+    "def simple_funct_explicit(integer_in = None):\n",
+    "    return integer_in * 5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116 ns ± 4.58 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "x = simple_funct(integer_in=10, multiple=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "103 ns ± 8.08 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "x = simple_funct_explicit(integer_in=10)"
    ]
   }
  ],
