--- a/Dextools/simulation_fixed_parameters.ipynb
+++ b/Dextools/simulation_fixed_parameters.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2175,34 +2175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simple_funct(integer_in = None, multiple = None):\n",
-    "    return integer_in * multiple\n",
-    "\n",
-    "def simple_funct_explicit(integer_in = None):\n",
-    "    return integer_in * 5\n"
+    "lags = 10\n",
+    "AR_parameter = [0.1, 0.1, 0.1, 0.1, 0.09, 0.09, 0.09, 0.08, 0.08, 0.07]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "116 ns ± 4.58 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "27.3 ns ± 3.66 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "\n",
-    "x = simple_funct(integer_in=10, multiple=5)"
+    "subset = AR_parameter#[0:lags]"
    ]
   },
   {
@@ -2222,6 +2219,119 @@
     "%%timeit\n",
     "\n",
     "x = simple_funct_explicit(integer_in=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 9.92 s\n",
+      "Wall time: 9.94 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "%%time\n",
+    "##Test of multiprocessing\n",
+    "import random\n",
+    "from scipy.stats import expon\n",
+    "import numpy as np\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for _ in range(1000):\n",
+    "    series = []\n",
+    "    for i in range(1000):\n",
+    "        if i < 10:\n",
+    "            x = random.expovariate(1)\n",
+    "        else:\n",
+    "            mean_prev_10 = np.mean(series[i-10:i])\n",
+    "            x = random.expovariate(1) + mean_prev_10\n",
+    "        series.append(x)\n",
+    "    \n",
+    "    mean = np.mean(series)\n",
+    "    std_dev = np.std(series)\n",
+    "    results.append((mean, std_dev))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from scipy.stats import expon\n",
+    "import numpy as np\n",
+    "import multiprocessing\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "def process_iteration(i):\n",
+    "    series = []\n",
+    "    for j in range(1000):\n",
+    "        if j < 10:\n",
+    "            x = random.expovariate(1)\n",
+    "        else:\n",
+    "            mean_prev_10 = np.mean(series[j-10:j])\n",
+    "            x = random.expovariate(1) + mean_prev_10\n",
+    "        series.append(x)\n",
+    "    \n",
+    "    mean = np.mean(series)\n",
+    "    std_dev = np.std(series)\n",
+    "    return (mean, std_dev)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    with multiprocessing.Pool() as pool:\n",
+    "        results = pool.map(process_iteration, range(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Pool\n",
+    "\n",
+    "def f(x):\n",
+    "    return x*x\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    with Pool(5) as p:\n",
+    "        print(p.map(f, [1, 2, 3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Pool\n",
+    "\n",
+    "\n",
+    "def f(x):\n",
+    "    return x * x\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    pool = Pool(processes=3)  # set the processes max number 3\n",
+    "    result = pool.map(f, range(10))\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
+    "    print(result)\n",
+    "    print('end')\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
