Added saving of simulated data from scenarios

--- a/Dextools/simulation_fixed_parameters.ipynb
+++ b/Dextools/simulation_fixed_parameters.ipynb
@@ -2333,6 +2333,62 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "# Creating a DataFrame by appending lists\n",
+    "start_time = time.time()\n",
+    "\n",
+    "list1 = []\n",
+    "list2 = []\n",
+    "list3 = []\n",
+    "list4 = []\n",
+    "list5 = []\n",
+    "list6 = []\n",
+    "for i in range(100000):\n",
+    "    list1.append(i)\n",
+    "    list2.append(i * 2)\n",
+    "    list3.append(i ** 2)\n",
+    "    list4.append(i % 3)\n",
+    "    list5.append(i / 2)\n",
+    "    list6.append(str(i))\n",
+    "\n",
+    "df1 = pd.DataFrame({\n",
+    "    'Column1': list1,\n",
+    "    'Column2': list2,\n",
+    "    'Column3': list3,\n",
+    "    'Column4': list4,\n",
+    "    'Column5': list5,\n",
+    "    'Column6': list6\n",
+    "})\n",
+    "\n",
+    "print(\"Time taken by appending lists:\", time.time() - start_time)\n",
+    "\n",
+    "# Creating a DataFrame by appending a new row\n",
+    "start_time = time.time()\n",
+    "\n",
+    "data = []\n",
+    "for i in range(100000):\n",
+    "    data.append({\n",
+    "        'Column1': i,\n",
+    "        'Column2': i * 2,\n",
+    "        'Column3': i ** 2,\n",
+    "        'Column4': i % 3,\n",
+    "        'Column5': i / 2,\n",
+    "        'Column6': str(i)\n",
+    "    })\n",
+    "\n",
+    "df2 = pd.DataFrame(data)\n",
+    "\n",
+    "print(\"Time taken by appending a new row:\", time.time() - start_time)\n"
+   ]
   }
  ],
  "metadata": {
